--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <ul>
         <li>
-            <a href="https://github.com/TCDI317-1/sitio-grupo/blob/master/ejemplos/01/index.html">Ejemplo 01: Lista de estudiantes</a>
+            <a href="https://github.com/TCDI317-1/sitio-grupo/blob/master/ejemplos/01/index.html">Ejemplo 01</a>
         </li>
     </ul>
 
