mejorar formato temario

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="temario">
         <header>
             <h2>
-                Temario
+                Diseño de medios digitales
             </h2>            
         </header>
 
@@ -168,12 +168,17 @@
     <section class="ejemplos">
         <header>
             <h2>
-                Ejemplos
+                Introducción a la Programación web
             </h2>
         </header>
         <ul>
             <li>
-                <a href="ejemplos/01">Ejemplo 1</a>
+                <header>
+                    Marcado semántico con HTML
+                </header>
+                <footer>
+                    <a href="ejemplos/01">Ver</a>
+                </footer>
             </li>
         </ul>
     </section>
